# scikit-plot

./: .gitattributes  .gitignore  .readthedocs.yml  DESCRIPTION.md  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_commands.py  tox.ini
.binder/: requirements.txt
docs/: user_guide.rst
docs/source/: about.rst  api_reference.py  conf.py  customer_sales_analytics.rst  faq.rst  financial_analytics.rst  getting_started.rst  glossary.rst  index.rst  index.rst.template  install.rst  marketing_analytics.rst  model_performance_evaluation.rst  operational_analytics.rst  quickstart.rst  render_templates.py  sg_execution_times.rst  user_guide.rst
docs1/source/: conf.py  index.rst
examples/: README.txt  plot_calibration_curve.py  plot_classifier_eval.py  plot_confusion_matrix.py  plot_cumulative_gain.py  plot_elbow.py  plot_elbow_curve.py  plot_feature_importances.py  plot_ks_statistic.py  plot_learning_curve.py  plot_lift.py  plot_pca_2d_projection.py  plot_pca_component_variance.py  plot_precision_recall.py  plot_roc.py  plot_silhouette.py
examples/cluster/: README.txt
examples/deciles/: README.txt  plot_lift_script.py
examples/decomposition/: README.txt  plot_pca_component_variance_script.py
examples/estimators/: README.txt  plot_feature_importance_script.py  (+1 more)
scikitplot/: __init__.py  classifiers.py  cluster.py  clustering.py  decile.py  deciles.py  decomposition.py  estimators.py  helpers.py  metrics.py  plotters.py
tests/: test_deciles.py  test_estimators.py  test_metrics.py
(+133 files in other folders)
