# Inside of setup.cfg
# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html for details.

[metadata]
license_files = LICENSE/*
description_file = README.md

[options.extras_require]
testing =
    pytest

[options]
packages = find:

[options.packages.find]
include = scikitplot*

[aliases]
test = pytest

[tool:pytest]
# disable-pytest-warnings should be removed once we rewrite tests
# using yield with parametrize
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS
testpaths = tests
addopts =
    --doctest-modules
    --disable-pytest-warnings
    --color=yes